@startuml
' Use IE notation
skinparam class {
  BackgroundColor<<IE>> LightYellow
  BorderColor<<IE>> Black
}

entity User <<IE>> {
  * userID : int
  * roleID : int
  --
    username : varchar
    email : varchar
    password : varchar
    points : int
}

entity Role <<IE>> {
  * roleID : int
  --
    roleName : varchar
    privileges : varchar
}

entity FriendList <<IE>> {
  * userID1 : int
  * userID2 : int
  --
    status : varchar
}

entity Post <<IE>> {
  * postID : int
  --
    userID : int
    threadID : int
    contents : file
    likes : int
    caption : varchar
    isDeleted : boolean
}

entity Comment <<IE>> {
  * commentID : int
  --
    userID : int
    postID : int
    contents : varchar
    isDeleted : boolean
}

entity Thread <<IE>> {
  * threadID : int
  --
    title : varchar
}

entity ThreadBridge <<IE>> {
  * userID : int
  * threadID : int
}

entity Chat <<IE>> {
  * chatID : int
  --
    chatType : varchar
}

entity ChatBridge <<IE>> {
  * chatID : int
  * userID : int
}

entity Message <<IE>> {
  * messageID : int
  --
    threadID : int
    userID : int
    chatID : int
    content : varchar
    isDeleted : boolean
}

entity Game <<IE>> {
  * gameID : int
  --
    description : varchar
    points : int
    timeLimit : int
}

entity GameBridge <<IE>> {
  * gameID : int
  * userID : int
}

' Relationships with cardinality
User ||-right-o{ Role : "has"
User }o-left-o{ FriendList : "friend"
User ||--o{ Post : "creates"
User ||-left-o{ Comment : "writes"
User ||--o{ Message : "sends"
User }|-down-|| ThreadBridge : "joins"
User }|--|| ChatBridge : "joins"
User ||-up-|{ GameBridge : "plays"

ChatBridge ||-down-|{ Chat : "participates in"
ThreadBridge ||--|{ Thread : "participates in"
Thread ||-up-o{ Message : "contains"
Thread ||-up-o{ Post : "contains"
Post ||-right-o{ Comment : "has"
Chat ||-left-o{ Message : "contains"
Game ||-down-|{ GameBridge : "played by"

@enduml
